--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -21,12 +21,12 @@ body {
 	<table align="center" border="0" cellpadding="0" cellspacing="0"
 		width="600" style="border-collapse: collapse;">
 		<tr>
-			<td align="center" bgcolor="#588C7E" style="padding: 40px 0 30px 0;">
-				<p>HANU Airline</p>
+			<td align="center" style="padding: 40px 0 30px 0;">
+				<h2>HANU Airline</h2>
 			</td>
 		</tr>
 		<tr>
-			<td bgcolor="#F2AE72" style="padding: 40px 30px 40px 30px;">
+			<td style="padding: 40px 30px 40px 30px;">
 				<p>
 					Dear <span th:text="${name}"></span>,
 				</p>
@@ -36,7 +36,7 @@ body {
 				arrival time will be: <span th:text="${arrivalTime}"></span>
 				</p>
 				<p>Sorry to bother</p>
-				<p>Thanks</p>
+				<h4>Thanks & Regarding</h4>
 			</td>
 		</tr>
 	</table>
